syntax = "proto3";

// Package arrebato.signing.command.v1 provides commands written to the raft log regarding signing key management. These
// messages are used internally by nodes in the cluster to portray changes from the leader node to all followers.
package arrebato.signing.command.v1;

option go_package = "github.com/davidsbond/arrebato/internal/proto/arrebato/signing/command/v1;signingcmd";

// The CreatePublicKey message is a command indicating that a new signing key has been created.
message CreatePublicKey {
  // The client that owns the public key.
  string client_id = 1;
  // The public key for verifying signed messages.
  bytes public_key = 2;
}
